<resources>
    <string name="app_name">Orgs</string>
    <string name="campo_usuario">Usuário: %1$s</string>
    <string name="campo_nome">Nome: %1$s</string>
    <string name="sair">Sair</string>
</resources>